RESOLVED FIXED238750
Fix the TestWebKitAPI build with an iOS 15.4 internal SDK
https://bugs.webkit.org/show_bug.cgi?id=238750
Summary Fix the TestWebKitAPI build with an iOS 15.4 internal SDK
Simon Fraser (smfr)
Reported 2022-04-04 11:49:38 PDT
Fix the TestWebKitAPI build with an iOS 15.4 internal SDK
Attachments
Patch (1.16 KB, patch)
2022-04-04 11:50 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2022-04-04 11:50:04 PDT
EWS
Comment 2 2022-04-04 14:31:42 PDT
Committed r292318 (249211@main): <https://commits.webkit.org/249211@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 456600 [details].
Radar WebKit Bug Importer
Comment 3 2022-04-04 14:32:16 PDT
Note You need to log in before you can comment on or make changes to this bug.