Fix the TestWebKitAPI build with an iOS 15.4 internal SDK https://bugs.webkit.org/show_bug.cgi?id=238750

Reviewed by Alex Christensen.

Add needed include.

* TestWebKitAPI/ios/UIKitSPI.h:

Canonical link: https://commits.webkit.org/249211@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@292318 268f45cc-cd09-0410-ab3c-d52691b4dbfc